--- a/index.html
+++ b/index.html
@@ -10,6 +10,34 @@
   <title>Benny's Pizza</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Welcome to Benny's Pizza</h1>
+    <p id="tagline">Rated best pizza on Earth by <em>The Intergalactic Times</em></p>
+    <h3>Pick your size</h3>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="small">
+      <label class="form-check-label" for="small">
+        Small 8"
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="medium">
+      <label class="form-check-label" for="medium">
+        Medium 12"
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="large">
+      <label class="form-check-label" for="large">
+        Large 16"
+      </label>
+    </div>
+
+
+
+
+
+
+  </div>
 </body>
 </html>
