--- a/index.html
+++ b/index.html
@@ -32,12 +32,103 @@
         Large 16"
       </label>
     </div>
-
-
-
-
-
-
+    <h3>Pick your toppings</h3>
+    <h5>Sauce</h5>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="red">
+      <label class="form-check-label" for="red">
+        Red Sauce
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="bbq">
+      <label class="form-check-label" for="bbq">
+        BBQ
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="alfredo">
+      <label class="form-check-label" for="alfredo">
+        Alfredo
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="olive">
+      <label class="form-check-label" for="olive">
+        Olive Oil
+      </label>
+    </div>
+    <h5>Cheesey Gooey Goodness</h5>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="mozzarella">
+      <label class="form-check-label" for="mozzarella">
+        Shredded Mozzarella Cheese
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="freshMozz">
+      <label class="form-check-label" for="freshMozz">
+        Fresh Mozzarella
+      </label>
+    </div>
+    <h5>Veggies For a Balanced Pie</h5>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="redOnion">
+      <label class="form-check-label" for="redOnion">
+        Red Onion
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="spinach">
+      <label class="form-check-label" for="spinach">
+        Spinach
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="peppers">
+      <label class="form-check-label" for="peppers">
+        Red & Green Peppers
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="broccoli">
+      <label class="form-check-label" for="broccoli">
+        Broccoli
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="mushroom">
+      <label class="form-check-label" for="mushroom">
+        Mushrooms
+      </label>
+    </div>
+    <h5>Meats Of The Savory Variety</h5>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="veganSausage">
+      <label class="form-check-label" for="veganSausage">
+        Vegan Sausage
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="pepperoni">
+      <label class="form-check-label" for="pepperoni">
+        Pepperoni
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="chicken">
+      <label class="form-check-label" for="chicken">
+        Chicken
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="sausage">
+      <label class="form-check-label" for="sausage">
+        Sausage
+      </label>
+    </div>
+    <button type="submit">Click to get your price!</button>
+    <div id="price"></div>
   </div>
 </body>
 </html>
