--- a/index.html
+++ b/index.html
@@ -35,28 +35,23 @@
     <h3>Pick your toppings</h3>
     <h5>Sauce</h5>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="red">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="red">
       <label class="form-check-label" for="red">
         Red Sauce
       </label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="bbq">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="bbq">
       <label class="form-check-label" for="bbq">
         BBQ
       </label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="alfredo">
-      <label class="form-check-label" for="alfredo">
-        Alfredo
-      </label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="olive">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="olive">
       <label class="form-check-label" for="olive">
         Olive Oil
       </label>
+      
     </div>
     <h5>Cheesey Gooey Goodness</h5>
     <div class="form-check">
