--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
     </div>
     <h5>Cheesey Gooey Goodness</h5>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="mozzarella">
-      <label class="form-check-label" for="mozzarella">
-        Shredded Mozzarella Cheese
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="mozz">
+      <label class="form-check-label" for="mozz">
+        Mozzarella
       </label>
     </div>
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" value="" id="freshMozz">
+      <input class="form-check-input" type="radio" name="flexRadioDefault" id="freshMozz">
       <label class="form-check-label" for="freshMozz">
         Fresh Mozzarella
       </label>
+      
     </div>
     <h5>Veggies For a Balanced Pie</h5>
     <div class="form-check">
