--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <form id="order">
       <div id="size">
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" value="" id="small">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" value="15" id="small">
           <label class="form-check-label" for="small">Small 8"</label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="medium">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" value="20" id="medium">
           <label class="form-check-label" for="medium">Medium 12"</label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="flexRadioDefault" id="large">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" value="25" id="large">
           <label class="form-check-label" for="large">Large 16"</label>
         </div>
       </div>
@@ -34,42 +34,42 @@
       <h5>Veggies For a Balanced Pie</h5>
       <div id="veggies">
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="redOnion">
+          <input class="form-check-input" type="checkbox" value="2" id="redOnion">
           <label class="form-check-label" for="redOnion">Red Onion</label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="spinach">
+          <input class="form-check-input" type="checkbox" value="2" id="spinach">
           <label class="form-check-label" for="spinach">Spinach</label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="peppers">
+          <input class="form-check-input" type="checkbox" value="2" id="peppers">
           <label class="form-check-label" for="peppers">Red & Green Peppers</label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="broccoli">
+          <input class="form-check-input" type="checkbox" value="2" id="broccoli">
           <label class="form-check-label" for="broccoli">Broccoli</label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="mushroom">
+          <input class="form-check-input" type="checkbox" value="2" id="mushroom">
           <label class="form-check-label" for="mushroom">Mushrooms</label>
         </div>
     </div>
       <h5>Meats Of The Savory Variety</h5>
       <div id="meat">
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="veganSausage">
+          <input class="form-check-input" type="checkbox" value="2" id="veganSausage">
           <label class="form-check-label" for="veganSausage">Vegan Sausage</label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="pepperoni">
+          <input class="form-check-input" type="checkbox" value="2" id="pepperoni">
           <label class="form-check-label" for="pepperoni">Pepperoni</label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="chicken">
+          <input class="form-check-input" type="checkbox" value="2" id="chicken">
           <label class="form-check-label" for="chicken">Chicken</label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="sausage">
+          <input class="form-check-input" type="checkbox" value="2" id="sausage">
           <label class="form-check-label" for="sausage">Sausage</label>
         </div>
       </div>
